SDI-2223-307-sesión2-Ejercicio-complementario1

--- a/src/main/resources/static/test.html
+++ b/src/main/resources/static/test.html
@@ -5,12 +5,17 @@
     <title>Tests Page</title>
 </head>
 <body>
-<form method="post" action="/mark/add">
-    <label for="description">Descripción:</label><br>
-    <input type="text" id="description" name="description"/><br>
-    <label for="score">Puntuación:</label><br>
-    <input type="text" id="score" name="score"/><br>
+<form method="post" action="/professor/add">
+    <label for="name">Name:</label><br>
+    <input type="text" id="name" name="name"/><br>
+    <label for="surname">Surname:</label><br>
+    <input type="text" id="surname" name="surname"/><br>
+    <label for="dni">DNI:</label><br>
+    <input type="number" id="dni" name="dni"/><br>
+    <label for="category">Name:</label><br>
+    <input type="text" id="category" name="category"/><br>
     <input type="submit" value="Send"/>
+
 </form>
 </body>
 </html>
